Fix errors related to CommandData and start JSON display of raw data results